# walnuts

./: .gitignore  README.md  pyproject.toml
WALNUTSpy/: MCMCutils.py  P2quantile.py  WALNUTS.py  adaptiveIntegrators.py  constants.py  example.py  mainGaussTransient.py  plotsGaussTransient.py  targetDistr.py
WALNUTSpy_examples/StockWatson/: mainSW.py  plotsSW.py  readme.md  sw_innov.stan  swdata.json
WALNUTSpy_examples/funnel/: mainFunnel.py  mainFunnelNUTS.py  mainFunnelOrbitLen.py  mainFunnelTransient.py  plotsFunnel.py  plotsFunnelOrbitLen.py
WALNUTSpy_examples/gaussian/: mainGaussESS.py  mainGaussTransient.py  plotsGaussESS.py  plotsGaussTransient.py
isokinetic/: MCanalysis.py  MCsim.py  WALNUTS.py  hamiltonian.py  microCanonical.py  samplers.py  targets.py
isokinetic/walnuts_imc/: bab_isokinetic.m  extend_orbit_backward.m  extend_orbit_forward.m  grad_log_funnel_density.m  iwalnuts.m  leapfrog.m  log_funnel_density.m  log_softmax.m  logsumexp.m  micro.m  micro_imc.m  run_iwalnuts.m  run_walnuts.m  sub_u_turn.m  u_turn.m  walnuts.m
monge/: monge.py
test/: targets.py  test.py
walnuts/: __init__.py  targets.py  test.py  walnuts.py  walnuts_stan.py
walnuts_cpp/: .gitignore  CMakeLists.txt  Makefile  README.md
walnuts_cpp/benchmarks/: CMakeLists.txt  normal_nuts.cpp
walnuts_cpp/cmake/: walnutsConfig.cmake.in
walnuts_cpp/cmake_deps/: CMakeLists.txt
walnuts_cpp/examples/: CMakeLists.txt  test.cpp
walnuts_cpp/extras/: .gitignore
walnuts_cpp/perf_tests/: CMakeLists.txt  readme.md
walnuts_cpp/tests/: CMakeLists.txt
